# navidrome-python-stats

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml
.github/workflows/: docker-publish.yml
docker/: nginx.conf  supervisord.conf
python/: main.py  pyproject.toml
python/navidrome_client/: _albums_mixin.py  _artists_mixin.py  _insights_mixin.py  _library_mixin.py  _songs_mixin.py  client.py  config.py  models.py  service.py
python/src/navidrome_client/: __init__.py  auth.py
python/src/web_server/: lifespan.py  router.py
python/src/web_server/controllers/: navidrome.py
python/web_server/: app.py  dependencies.py  lifespan.py  router.py
python/web_server/controllers/: albums.py  insights.py  navidrome.py  root.py  statistics.py  stats.py
python/web_server/models/: album.py  artist.py  insights.py  song.py  statistics.py  stats.py
src/navidrome_client/: client.py  config.py  exceptions.py  models.py  service.py
src/web_server/: app.py  dependencies.py
vue/: index.html  package.json  vite.config.ts
vue/src/: App.vue  style.css
vue/src/components/: AlbumCard.vue  AlbumCardSkeleton.vue  AlbumCarousel.vue  AlbumSection.vue  AlbumsHomeSection.vue  CarouselButton.vue  HeroStats.vue  LibraryDurationCard.vue
vue/src/components/charts/: ArtistDominanceChart.vue  DecadesChart.vue  FormatChart.vue  GenresChart.vue  LongestAlbumsChart.vue  MostPlayedArtistsChart.vue  (+4 more)
vue/src/router/: index.ts
vue/src/services/: api.ts
vue/src/types/: album.ts  artist.ts  index.ts  responses.ts  song.ts
vue/src/views/: HomePage.vue  InsightsPage.vue
(+4 files in other folders)
